--- a/src/posts/2019-10-21-react-ref-autofocus/index.mdx
+++ b/src/posts/2019-10-21-react-ref-autofocus/index.mdx
@@ -1,8 +1,8 @@
 ---
 path: "/react-ref-autofocus/"
 date: 2019-10-21T17:00:00.000Z
-title: "10 different ways to autofocus a text input in React, some of which ALMOST work!"
-description: "I write this after a long afternoon of frustration."
+title: "3 ways to autofocus a text input in React that ALMOST always work!"
+description: "Deep dive into the autofocus attribute, the focus() method, the autoFocus prop, the useRef hook and callback refs."
 image: "./autofocused-ui-small.png"
 ---
 
@@ -245,7 +245,7 @@ That way, whenever the input is focused, all its text will be selected as well.
 
 ---
 
-### How does it work?
+#### How does it work?
 
 Interestingly, if you inspect the DOM, you won't see an `autofocus` attribute on the input element:
 
@@ -253,9 +253,11 @@ Interestingly, if you inspect the DOM, you won't see an `autofocus` attribute on
 
 That's odd! Turns out the React team decided the `autofocus` attribute had [too many cross-browser inconsistencies, so they polyfilled the behavior](https://github.com/facebook/react/issues/11851#issuecomment-351672131). When you pass an `autoFocus` prop, React will internally call `focus()` when the `input` element mounts.
 
-### Does it always work?
+This is pretty neat! We're essentially getting all the benefits of manually calling `focus()`, but with the simplicity of the declarative `autofocus` attribute.
 
-There's one situation where I find that this doesn't work. Recall that I mentioned earlier how we render React components into legacy parts of our app:
+#### Does it always work?
+
+There's one situation where I find that `autoFocus` doesn't work. Recall that I mentioned earlier how we render React components into legacy parts of our app:
 
 ```js
 const root = document.createElement("div");
@@ -266,26 +268,24 @@ ReactDOM.render(<App />, root);
 someContainer.appendChild(root);
 ```
 
-If you render your React component into a detached DOM node, React will call `focus()` too soon. This will result in the `input` not focusing when your React tree becomes visible.
+If you render your React component into a detached element, React will call `focus()` too soon. This will result in the `input` not focusing when your React tree gets added to the DOM.
 
-We _could_ refactor the parts of our app where we combine React and non-React code. However, for the purposes of learning, I'm going to talk about some workarounds we can do entirely within React.
+We _could_ refactor the parts of our app where we combine React and non-React code. However, for the purposes of _learning_ and _fun_, I'm going to talk about some workarounds we can do entirely within React.
 
 ### React refs
 
-What if we wanted to manually control when `focus()` gets called on the `input` DOM element? We can do that with _refs_ in React.
+What if we wanted to manually control when `focus()` gets called on the `input` DOM element? We can do that with _refs_ in React. Refs allow us to access the actual DOM elements that React creates.
 
-In React, _refs_ allow us to access the actual DOM elements. There are like 10 (ok not that many) ways to use refs in React. They have subtle differences that often trip me up, so I'll be going over those differences.
+There are like practically 10 different ways to use refs in React (ok not _that_ many). They have subtle differences that often trip me up, so I'll be going over those differences.
 
-- [useRef](https://reactjs.org/docs/hooks-reference.html#useref) for FunctionComponents using hooks
+- [useRef](https://reactjs.org/docs/hooks-reference.html#useref) for function components using hooks
 - [React.createRef](https://reactjs.org/docs/refs-and-the-dom.html): similar to `useRef`, but for class components.
 - [Callback refs](https://reactjs.org/docs/refs-and-the-dom.html): Has one extra use case: You get notified when a ref gets assigned.
-- String refs: These are deprecated and I won't discuss them here.
+- String refs: These are deprecated and I won't discuss them.
 
-#### useRef
+### useRef
 
-Let's try it using `useRef`.
-
-Function component with hooks:
+Let's try `useRef` first.
 
 ```jsx
 export const AutofocusFunctionComponent = () => {
@@ -294,7 +294,6 @@ export const AutofocusFunctionComponent = () => {
   useEffect(() => {
     if (inputElement.current) {
       inputElement.current.focus();
-      inputElement.current.select();
     }
   }, []);
 
@@ -307,26 +306,23 @@ export const AutofocusFunctionComponent = () => {
 };
 ```
 
-In these examples, we use the `ref` prop on our `input` element. By setting the `ref` prop, React internally will assign the native DOM node to `this.inputElement.current`, which allows us to later call `focus()` and `select()` when the component mounts. Nice!
+In this example, we use the `ref` prop on our `input` element. By setting the `ref` prop, React internally will assign the native DOM element to `inputElement.current`. With that element saved, we can later call `focus()` when the component mounts. Nice!
 
-##### When doesn't this work?
+(If you're more familiar with class components, this example is roughly analogous to using `React.createRef()` in the constructor and calling `focus()` in `componentDidMount`.)
 
-One situation where this doesn't work: If you display the `input` element later, after the component mounts, then we won't focus it. In this example, we show a loading indicator for 5 seconds:
+#### Does this always work?
+
+The `[]` dependency list in the `useEffect` call looks a bit suspicious. That means the effect will only run on component mount, and never again.
+
+Thus, if you display the `input` element _after_ the component mounts, we won't focus it. In this example, imagine `loading` is `true` for the first 5 seconds.
 
 ```jsx
-const AutofocusFunctionComponent = () => {
-  const [loading, setLoading] = useState(true);
-
-  useEffect(() => {
-    setTimeout(() => setLoading(false), 5000);
-  }, []);
-
+const AutofocusFunctionComponent = ({ loading }) => {
   const inputElement = useRef(null);
 
   useEffect(() => {
     if (inputElement.current) {
       inputElement.current.focus();
-      inputElement.current.select();
     }
   }, []);
 
@@ -343,9 +339,9 @@ const AutofocusFunctionComponent = () => {
 };
 ```
 
-In this case, the `useEffect` code already ran, before the `input` is visible! We need to call `focus` when the `input` becomes visible.
+In this case, the `useEffect` code already ran, before the `input` is visible! We need to call `focus` later, when the `input` becomes visible.
 
-You might think we could do something like this:
+You might think we could update the `useEffect` dependency list to be more accurate:
 
 ```jsx
 useEffect(() => {
@@ -356,30 +352,59 @@ useEffect(() => {
 }, [inputElement.current]);
 ```
 
-Turns out that doesn't work. You'll get a lint error if you have the `react-hooks/exhaustive-deps` ESLint rule set up.
+Turns out that doesn't work. In fact, you'll get a lint error if you have the `react-hooks/exhaustive-deps` ESLint rule set up.
 
 ![](./useeffect-dependency.png)
 
-The useEffect handler won't actually run, since there's no re-render after the ref gets attached. In this situation, the React documentation recommends using a callback ref instead.
+The `useEffect` handler won't actually run, since React won't re-render after the ref gets attached. In this situation, the React documentation recommends using a callback ref instead.
 
 > Keep in mind that useRef doesn’t notify you when its content changes. Mutating the .current property doesn’t cause a re-render. If you want to run some code when React attaches or detaches a ref to a DOM node, you may want to use a callback ref instead.
 
----[React documentation, useRef hook reference](https://reactjs.org/docs/hooks-reference.html#useref)
+—[React documentation, useRef hook reference](https://reactjs.org/docs/hooks-reference.html#useref)
 
-There are ways to work around this. For example, you could split this into another component, `AutofocusInput`. Then when `AutofocusInput` mounts, it will always be visible, since the loading is kept in the parent component. Another way would be to have the `useEffect` handler get called every render, (no `[]` dependencies), then check if the ref has been set for the first time.
+There are other ways to work around this problem. For example, you could split the `input` into another component, `AutofocusInput`. Then when `AutofocusInput` mounts, it will always be visible, since the loading is kept in the parent component.
 
-Up to you if you want to use any of those workarounds. I'm going to move on to "callback refs."
+In the meantime, I'm going to move on to _callback refs_.
 
-#### Callback refs
+### Callback refs
 
-A callback ref looks like this:
+When you pass a _function_ as the `ref` prop, you're using a _callback ref_.
+
+```jsx
+// Callback ref
+<input
+  ref={element => {
+    /* do something */
+  }}
+/>
+```
+
+When we do this, React will instead _call_ the callback with the `element` parameter set to the input DOM element.
+
+As a mental model, I like to imagine object refs as a special case of callback refs:
+
+```jsx
+const inputElement = useRef(null);
+
+<input ref={inputElement} />
+
+// roughly the same behavior as:
+
+<input
+  ref={element => {
+    // save element on `inputElement.current` so that we can access it later
+    inputElement.current = element;
+  }}
+/>
+```
+
+However, when we use a callback ref, we can do more than just mutate an object. We're getting notified _when the ref gets set_, and can do additional work at that time. For this example, I'll call `focus()` in the callback itself.
 
 ```jsx
 export const AutofocusFunctionComponent = () => {
   const callbackRef = useCallback(inputElement => {
     if (inputElement) {
       inputElement.focus();
-      inputElement.select();
     }
   }, []);
 
@@ -392,20 +417,18 @@ export const AutofocusFunctionComponent = () => {
 };
 ```
 
-Notice the distinction---instead of passing a ref "object" from `useRef` as the `ref` prop, we're passing a _function_. We're passing the function `inputElement => { ... }`.
-
-When we do this, React will instead _call_ the callback with the `inputElement` parameter set to the DOM element. (With `useRef`, it only mutated the ref object's `.current` property.)
+Notice the distinction again—instead of passing a ref object as the `ref` prop, we're passing the _function_ `inputElement => { ... }`.
 
 It gets called in these situations:
 
 - Called with a DOM element when the element is created
 - Called with `null` when the element is destroyed
 
-In this example, it will work with the loading indicator, since `callbackRef` won't get called until the `input` is rendered.
+In this example, our autofocusing will work with the loading indicator situation we described above. It works since `callbackRef` will get called after the `input` element is created.
 
-##### A note about `useCallback`
+#### A note about `useCallback`
 
-You'll notice I used `useCallback` when assigning `callbackRef`. I didn't directly pass a function to `ref`. This is important. If you don't use `useCallback`, like this:
+You'll notice I used `useCallback` when assigning `callbackRef`. I didn't directly pass an inline function to `ref`. This is important. If you don't use `useCallback`, like this:
 
 ```jsx
 <label>
@@ -417,7 +440,6 @@ You'll notice I used `useCallback` when assigning `callbackRef`. I didn't direct
     ref={inputElement => {
       if (inputElement) {
         inputElement.focus();
-        inputElement.select();
       }
     }}
   />
@@ -426,7 +448,7 @@ You'll notice I used `useCallback` when assigning `callbackRef`. I didn't direct
 
 ...then your `input` will re-focus on _every render_. Why?
 
-Callback refs get called in one situation I didn't mention: when the callback ref changes. You can think of React doing something internally like this when re-rendering:
+Callback refs get called in one more situation I didn't mention: when the callback ref changes. You can think of React doing something internally like this when re-rendering:
 
 ```jsx
 if (previousCallbackRef !== currentCallbackRef) {
@@ -441,27 +463,27 @@ To avoid this, `useCallback` memoizes the function, so it only gets created once
 
 > If the ref callback is defined as an inline function, it will get called twice during updates, first with null and then again with the DOM element. This is because a new instance of the function is created with each render, so React needs to clear the old ref and set up the new one. You can avoid this by defining the ref callback as a bound method on the class, but note that it shouldn’t matter in most cases.
 
----[React docs, caveats with callback refs](https://reactjs.org/docs/refs-and-the-dom.html#caveats-with-callback-refs)
+—[React docs, caveats with callback refs](https://reactjs.org/docs/refs-and-the-dom.html#caveats-with-callback-refs)
 
-The React docs say "defining the ref callback as a bound method on the class" is the solution, but that's written for class components. If you're using a function component with hooks, `useCallback` is the equivalent behavior you want.
+The React docs say "defining the ref callback as a bound method on the class" is the solution, but that's referring to class components. If you're using a function component with hooks, [`useCallback` will get you equivalent memoization behavior](https://reactjs.org/docs/hooks-reference.html#usecallback).
 
-##### When doesn't this work?
+#### Does this always work?
 
-This has been the most reliable technique for me, but I've had issues with focusing "too soon." This usually happens in more legacy part of the apps where the React root hasn't been mounted yet. I can solve that with a `setTimeout` to defer the actual `focus` call, or waiting for a `useEffect` call (like the solution above.)
+The callback refs solution also broke for me in legacy parts of the app, where the React tree wasn't in the DOM yet. I was able to work around that by deferring the `focus()` call with a `setTimeout`, though 🤷🏼‍♂️.
 
 ## Conclusion
 
-In summary, we went over these techniques:
+In summary, we went over these techniques for autofocusing an `input` in React:
 
-- autofocus attribute
+- `autoFocus` prop
 - `useRef` hook
 - Callback refs
 
 As well as some workarounds for common issues:
 
-- Separating `useRef` into another component
-- Setting a timeout to defer calling `focus()`
+- Separating `useRef` + `useEffect` into another component
+- `setTimeout` in the callback ref
 
-I'm not going to pick a specific one and say "you should use this all the time." I just got frustrated looking up "how to autofocus an input" and finding lots of different solutions, none of which worked for my specific use case.
+I would recommend that you use the `autoFocus` prop, unless you have odd circumstances that prevent it from working.
 
-I'm hoping that this comprehensive overview at least gives you the tools to know which solution your app needs.
+Otherwise, I'm hoping that this comprehensive overview gives you the understanding you need to pick the correct solution for your specific app.
