sunset main portfolio site, redirect to blog subdomain

--- a/src/posts/2019-10-25-react-ref-autofocus/index.mdx
+++ b/src/posts/2019-10-25-react-ref-autofocus/index.mdx
@@ -121,7 +121,7 @@ Load the page, wait 5 seconds. [You'll get different behavior depending on the b
 
 Oof.
 
-(The HTML spec [requires that only one `autofocus` element exists in the document](https://www.w3.org/TR/html52/sec-forms.html#autofocusing-a-form-control-the-autofocus-attribute), so Chrome's and Safari's behaviors are probably equally valid 🤷🏾‍♀️.)
+(The HTML spec [requires that only one `autofocus` element exists in the document](https://www.w3.org/TR/html52/sec-forms.html#autofocusing-a-form-control-the-autofocus-attribute), so Chrome's and Safari's behaviors are probably equally valid 🤷‍♀️.)
 
 ### DOM API focus()
 
@@ -483,7 +483,7 @@ The React docs say "defining the ref callback as a bound method on the class" is
 
 #### Do callback refs always work?
 
-The callback refs solution also broke for me in legacy parts of the app, where the React tree wasn't in the DOM yet. I was able to work around that by deferring the `focus()` call with a `setTimeout`, though 🤷🏼‍♂️.
+The callback refs solution also broke for me in legacy parts of the app, where the React tree wasn't in the DOM yet. I was able to work around that by deferring the `focus()` call with a `setTimeout`, though 🤷‍♀️.
 
 ## Conclusion
 
