--- a/src/posts/2019-07-02-code-review-experience/index.mdx
+++ b/src/posts/2019-07-02-code-review-experience/index.mdx
@@ -49,11 +49,11 @@ To keep this post beginner-friendly, I’ll share each `git` command used. That 
 For me, it’s implausible to have good commit history when I’m done developing a feature. I always try to do it, and I’m relatively successful at first. But then my code doesn’t work. And then, once I’m happy with the code, my commit history looks like this!
 
 ![Bitbucket web UI commit history
-Daniel Johnson d23c695 fix unit test copy and paste
-Daniel Johnson 5fc0924 yes
-Daniel Johnson 4cd72f4 add the action
-Daniel Johnson 13c3ffd hmm
-Daniel Johnson 257e7b0 wrok in progress](./commit-history.png)
+Maisie Johnson d23c695 fix unit test copy and paste
+Maisie Johnson 5fc0924 yes
+Maisie Johnson 4cd72f4 add the action
+Maisie Johnson 13c3ffd hmm
+Maisie Johnson 257e7b0 wrok in progress](./commit-history.png)
 
 Thankfully, I can control what my commit history looks like before I open a PR! 👏
 
