--- a/src/posts/2019-10-17-jsx-html-differences/index.mdx
+++ b/src/posts/2019-10-17-jsx-html-differences/index.mdx
@@ -166,7 +166,7 @@ But! I forget to expand `name` into `name={name}`.
 Using ESLint or TypeScript is helpful in this situation, since it will warn me that I never used the variable `name` until I write `name={name}`.
 
 ![There is a code sample:
-  `const name = 'Daniel';`
+  `const name = 'Maisie';`
   `<NameDisplay name />`
   Hovering my mouse over name, TypeScript shows me an error.
   'name' is declared but its value is never read. ts(6133)
