tweak around github links and toggle theme button text

--- a/src/posts/2019-06-18-js-strict-mode/index.mdx
+++ b/src/posts/2019-06-18-js-strict-mode/index.mdx
@@ -4,6 +4,7 @@ date: 2019-06-18T17:00:00.000Z
 title: "Deep dive into 'use strict' in JavaScript"
 description: "Why was strict mode introduced? Are we using it? Is it still relevant in 2019?"
 image: "./eslint-use-strict-unnecessary-small.png"
+tweet: "https://twitter.com/MaisieBlog/status/1360818470804283395"
 ---
 
 import GitGrep from "./git-grep";
