--- a/src/posts/2019-07-02-code-review-experience/index.mdx
+++ b/src/posts/2019-07-02-code-review-experience/index.mdx
@@ -4,6 +4,7 @@ date: 2019-07-02T17:00:00.000Z
 title: "5 or 6 ways to design a Code Review ✨ Experience ✨"
 description: "A few of my favorite techniques for structuring pull requests, making it easier on my reviewers."
 image: "./commit-history-small.png"
+tweet: "https://twitter.com/MaisieBlog/status/1360818656255467525"
 ---
 
 import CommitMessageEditor from "./commit-message-editor";
