--- a/src/posts/2019-10-17-jsx-html-differences/index.mdx
+++ b/src/posts/2019-10-17-jsx-html-differences/index.mdx
@@ -4,6 +4,7 @@ date: 2019-10-17T17:00:00.000Z
 title: "Very Confusing differences between JSX and HTML"
 description: "When I work with both JSX and HTML, I get tripped up by subtle differences between the two languages."
 image: "./name-declared-but-not-used-small.png"
+tweet: "https://twitter.com/MaisieBlog/status/1360818766204997633"
 ---
 
 import InfoBlock from "../../components/custom-blocks/info-block";
