--- a/src/posts/2019-10-25-react-ref-autofocus/index.mdx
+++ b/src/posts/2019-10-25-react-ref-autofocus/index.mdx
@@ -4,6 +4,7 @@ date: 2019-10-25T17:00:00.000Z
 title: "3 ways to autofocus an input in React that ALMOST always work!"
 description: "Deep dive into the autofocus attribute, the focus() method, the autoFocus prop, the useRef hook and callback refs."
 image: "./autofocused-ui-small.png"
+tweet: "https://twitter.com/MaisieBlog/status/1360818983318941696"
 ---
 
 import InfoBlock from "../../components/custom-blocks/info-block";
