--- a/src/posts/2021-02-16-click-event-target/index.mdx
+++ b/src/posts/2021-02-16-click-event-target/index.mdx
@@ -2,8 +2,7 @@
 path: "/click-event-target/"
 date: 2021-02-16T17:00:00.000Z
 title: "Can YOU predict `event.target` for click events in each browser?"
-description: "
-How I fixed a frustrating browser-specific bug. The value of `event.target` was inconsistent for clicks on <input> elements."
+description: "How I fixed a bug involving browser-specific behavior with click events, input elements, and `event.target`."
 image: "./event-target-left-small.png"
 tweet: ""
 ---
