--- a/src/posts/2021-02-16-click-event-target/index.mdx
+++ b/src/posts/2021-02-16-click-event-target/index.mdx
@@ -4,7 +4,7 @@ date: 2021-02-16T17:00:00.000Z
 title: "Can YOU predict `event.target` for click events in each browser?"
 description: "How I fixed a bug involving browser-specific behavior with click events, input elements, and `event.target`."
 image: "./event-target-left-small.png"
-tweet: ""
+tweet: "https://twitter.com/MaisieBlog/status/1362260238452203521"
 ---
 
 import InfoBlock from "../../components/custom-blocks/info-block";
